<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.aman.myapp1.activity.ReferFriends"
    android:background="#ffff">

    <FrameLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#ffffef76"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="15dp"
            android:text="@string/refertext1"
            android:id="@+id/textView7"
            android:layout_gravity="center|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:background="@drawable/light_bulb_pressed"
            android:layout_gravity="center_horizontal|bottom" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/frag"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:text="@string/refertext2"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refertext3"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/textView8"
            android:id="@+id/textView9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INVITE"
            android:id="@+id/button2"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#ffffef76" />
        <TextView
            android:id="@+id/refertext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refertext4"
            android:textSize="26sp"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refertext5"
            android:layout_above="@+id/refertext3"
            android:layout_alignLeft="@+id/refertext3"
            android:layout_alignStart="@+id/refertext3" />


    </RelativeLayout>

</RelativeLayout>
