<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.aman.myapp1.activity.Feature1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:background="#5a0f5a"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/map"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locoff_text2"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="ENABLE LOCATION"
        android:id="@+id/button3"
        android:textSize="18dp"
        android:background="#F7F7F7"
        android:textColor="#5a0f5a"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locoff_text3"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="15dp"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/locoff_spinner"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        style="@style/mySpinnerItemStyle"
        >
    </Spinner>


</LinearLayout>
